[gd_scene load_steps=92 format=2]

[ext_resource path="res://assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Objects/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/ProgressBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=5]
[ext_resource path="res://assets/player/john_idle_ng.png" type="Texture" id=6]
[ext_resource path="res://assets/player/john_run_shoot.png" type="Texture" id=7]
[ext_resource path="res://assets/player/john_run_ng.png" type="Texture" id=8]
[ext_resource path="res://assets/player/john_jump_ng.png" type="Texture" id=9]
[ext_resource path="res://assets/player/john_run_shoot_ng.png" type="Texture" id=10]
[ext_resource path="res://assets/player/john_idle.png" type="Texture" id=11]
[ext_resource path="res://assets/player/john_jump.png" type="Texture" id=12]
[ext_resource path="res://assets/player/john_run.png" type="Texture" id=13]
[ext_resource path="res://assets/Sound_Effects_-_Empty_gun_shot.mp3" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 28.5 )

[sub_resource type="DynamicFont" id=77]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 27.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 82, 80, 13, 13 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 234, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 10 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 10 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 10 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 10 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 10 )
region = Rect2( 234, 0, 26, 22 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "run_shoot",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 11 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 11 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 11 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 11 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 12 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 12 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 12 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 12 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 12 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 12 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 12 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 12 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 13 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 13 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 13 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 13 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 13 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 13 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 13 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 13 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 13 )
region = Rect2( 234, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 52, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 78, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 104, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 130, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 156, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 182, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 208, 0, 26, 22 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 234, 0, 26, 22 )

[sub_resource type="SpriteFrames" id=75]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "run_shoot",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=76]
size = 20
font_data = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" groups=["Climber"]]
z_index = 1
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 800, 1000 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -211 )
current = true
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Health" parent="Camera2D/CanvasLayer" instance=ExtResource( 3 )]

[node name="ProgressBar" parent="Camera2D/CanvasLayer" instance=ExtResource( 4 )]
margin_left = 10.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 77 )
value = 20.0

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, 3.75 )
shape = SubResource( 2 )

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="CoinChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinChecker"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="CrosshairMarker" type="Position2D" parent="." groups=["crosshair"]]
scale = Vector2( 3, 3 )
z_index = 1

[node name="CrosshairSprite" type="AnimatedSprite" parent="CrosshairMarker"]
frames = SubResource( 5 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="NormalMode" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 40 )
animation = "idle"

[node name="RocketMode" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 75 )
animation = "run"

[node name="MuzzleRight" type="Position2D" parent="."]
position = Vector2( 27, 12 )

[node name="MuzzleLeft" type="Position2D" parent="."]
position = Vector2( -27, 12 )

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="Label" type="Label" parent="."]
margin_left = -120.0
margin_top = -77.0
margin_right = 120.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 76 )
text = "NO ROCKETS AVAILABLE"

[node name="RocketLabelTimer" type="Timer" parent="."]

[node name="RocketReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 24.0

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="LadderChecker" to="." method="_on_LadderChecker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_LadderChecker_body_exited"]
[connection signal="area_entered" from="CoinChecker" to="." method="_on_CoinChecker_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
[connection signal="timeout" from="RocketLabelTimer" to="." method="_on_RocketLabelTimer_timeout"]
